--- a/fcrepo-security/fcrepo-security-jaas/pom.xml
+++ b/fcrepo-security/fcrepo-security-jaas/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-security</artifactId>
-    <version>3.7.1</version>
+    <version>3.7.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>fcrepo-security-jaas</artifactId>
